# meetily

./: BLUETOOTH_PLAYBACK_NOTICE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  PRIVACY_POLICY.md  README.md  ROADMAP.md
.github/workflows/: WORKFLOWS_OVERVIEW.md  build-devtest.yml  build-linux.yml  build-macos.yml  build-test.yml  build-windows.yml  build.yml  ci.yml  release.yml
backend/: build_whisper.cmd  requirements.txt
backend/app/: chat_processor.py  diarization.py  main.py
docs/: BUILDING.md  GPU_ACCELERATION.md  architecture.md  audit-remediation-plan.md
frontend/: README.md  build.ps1  clean_build.sh  package.json  setup_windows.ps1  tailwind.config.js
frontend/scripts/: stage-sherpa-dlls.mjs
frontend/src-tauri/: .gitignore  Cargo.toml  NOTIFICATION_TESTING.md  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
frontend/src-tauri/migrations/: 20260522120000_add_lmstudio_endpoint.sql  20260708120000_add_pyannote_api_key.sql  20260708130000_add_huggingface_token.sql  20260713130000_add_fts5_search.sql  20260713140000_add_meeting_tags.sql
frontend/src-tauri/src/: export.rs  lib.rs  main.rs  migration.rs  onboarding.rs  tray.rs
frontend/src-tauri/templates/: README.md
frontend/src-tauri/tests/: mcp_smoke.rs
frontend/src/app/: globals.css  layout.tsx  metadata.ts  metadata.tsx  page.tsx
frontend/src/components/: About.tsx  Info.tsx  (+20 more)
llama-helper/: Cargo.toml
llama-helper/src/: main.rs
scripts/: generate-update-manifest-github.js  inject_transcript.py  test-update-locally.js
(+124 files in other folders)
